--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: sans-serif;
-  margin: 0;
+  margin: 40px;
   padding: 0;
 }
