Computer plays next round when user enters the corrent color

--- a/src/Control.css
+++ b/src/Control.css
@@ -21,6 +21,10 @@
   padding-bottom: 5px;
 }
 
+.Control-boxCount h3 {
+  margin: 0;
+}
+
 .Control-buttonStart,
 .Control-buttonOnOff,
 .Control-buttonLast {
